--- a/cs301-watchcat.ioc
+++ b/cs301-watchcat.ioc
@@ -65,8 +65,8 @@ ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=WatchCat.ioc
-ProjectManager.ProjectName=WatchCat
+ProjectManager.ProjectFileName=cs301-watchcat.ioc
+ProjectManager.ProjectName=cs301-watchcat
 ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
