--- a/cs301-watchcat.ioc
+++ b/cs301-watchcat.ioc
@@ -9,20 +9,27 @@ Mcu.CPN=STM32F103RCT6
 Mcu.Family=STM32F1
 Mcu.IP0=NVIC
 Mcu.IP1=RCC
-Mcu.IP2=SYS
-Mcu.IP3=TIM2
-Mcu.IPNb=4
+Mcu.IP2=SPI1
+Mcu.IP3=SYS
+Mcu.IP4=TIM2
+Mcu.IPNb=5
 Mcu.Name=STM32F103R(C-D-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PD0-OSC_IN
 Mcu.Pin1=PD1-OSC_OUT
-Mcu.Pin2=PC5
-Mcu.Pin3=PA13
-Mcu.Pin4=PA14
-Mcu.Pin5=PC11
-Mcu.Pin6=PC12
-Mcu.Pin7=VP_TIM2_VS_ClockSourceINT
-Mcu.PinsNb=8
+Mcu.Pin10=PA14
+Mcu.Pin11=PC11
+Mcu.Pin12=PC12
+Mcu.Pin13=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin2=PA1
+Mcu.Pin3=PA4
+Mcu.Pin4=PA5
+Mcu.Pin5=PA6
+Mcu.Pin6=PA7
+Mcu.Pin7=PC4
+Mcu.Pin8=PC5
+Mcu.Pin9=PA13
+Mcu.PinsNb=14
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103RCTx
@@ -41,10 +48,25 @@ NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:false\:true\:false
 NVIC.TIM2_IRQn=true\:1\:0\:true\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+PA1.GPIOParameters=GPIO_Label
+PA1.GPIO_Label=RF24_IRQ
+PA1.Locked=true
+PA1.Signal=GPIO_Input
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PA4.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA4.GPIO_Label=RF24_CE
+PA4.GPIO_PuPd=GPIO_PULLUP
+PA4.Locked=true
+PA4.Signal=GPIO_Output
+PA5.Mode=Full_Duplex_Master
+PA5.Signal=SPI1_SCK
+PA6.Mode=Full_Duplex_Master
+PA6.Signal=SPI1_MISO
+PA7.Mode=Full_Duplex_Master
+PA7.Signal=SPI1_MOSI
 PC11.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 PC11.GPIO_Label=IIC_SDA
 PC11.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
@@ -55,6 +77,11 @@ PC12.GPIOParameters=GPIO_Label
 PC12.GPIO_Label=IIC_SCL
 PC12.Locked=true
 PC12.Signal=GPIO_Output
+PC4.GPIOParameters=GPIO_PuPd,GPIO_Label
+PC4.GPIO_Label=RF24_CSN
+PC4.GPIO_PuPd=GPIO_PULLUP
+PC4.Locked=true
+PC4.Signal=GPIO_Output
 PC5.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PC5.GPIO_Label=KEY0
 PC5.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
@@ -96,7 +123,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM2_Init-TIM2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM2_Init-TIM2-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true
 RCC.ADCFreqValue=36000000
 RCC.AHBFreq_Value=72000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -124,6 +151,15 @@ RCC.USBFreq_Value=72000000
 RCC.VCOOutput2Freq_Value=8000000
 SH.GPXTI5.0=GPIO_EXTI5
 SH.GPXTI5.ConfNb=1
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_8
+SPI1.CLKPhase=SPI_PHASE_1EDGE
+SPI1.CLKPolarity=SPI_POLARITY_LOW
+SPI1.CRCCalculation=SPI_CRCCALCULATION_DISABLE
+SPI1.CalculateBaudRate=9.0 MBits/s
+SPI1.Direction=SPI_DIRECTION_2LINES
+SPI1.IPParameters=VirtualType,Mode,Direction,BaudRatePrescaler,CalculateBaudRate,CLKPolarity,CLKPhase,CRCCalculation
+SPI1.Mode=SPI_MODE_MASTER
+SPI1.VirtualType=VM_MASTER
 TIM2.IPParameters=Prescaler,Period
 TIM2.Period=199
 TIM2.Prescaler=7199
