feat(chat): impl rest of chat app

--- a/cs301-watchcat.ioc
+++ b/cs301-watchcat.ioc
@@ -13,16 +13,19 @@ Mcu.IP2=SPI1
 Mcu.IP3=SYS
 Mcu.IP4=TIM2
 Mcu.IP5=TIM3
-Mcu.IPNb=6
+Mcu.IP6=USART1
+Mcu.IPNb=7
 Mcu.Name=STM32F103R(C-D-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PD0-OSC_IN
 Mcu.Pin1=PD1-OSC_OUT
-Mcu.Pin10=PA14
-Mcu.Pin11=PC11
-Mcu.Pin12=PC12
-Mcu.Pin13=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin14=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin10=PA10
+Mcu.Pin11=PA13
+Mcu.Pin12=PA14
+Mcu.Pin13=PC11
+Mcu.Pin14=PC12
+Mcu.Pin15=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin16=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin2=PA1
 Mcu.Pin3=PA4
 Mcu.Pin4=PA5
@@ -30,8 +33,8 @@ Mcu.Pin5=PA6
 Mcu.Pin6=PA7
 Mcu.Pin7=PC4
 Mcu.Pin8=PC5
-Mcu.Pin9=PA13
-Mcu.PinsNb=15
+Mcu.Pin9=PA9
+Mcu.PinsNb=17
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103RCTx
@@ -51,6 +54,7 @@ NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:false\:true\:false
 NVIC.TIM2_IRQn=true\:2\:1\:true\:false\:true\:true\:true\:true
 NVIC.TIM3_IRQn=true\:2\:2\:true\:false\:true\:true\:true\:true
+NVIC.USART1_IRQn=true\:1\:0\:true\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA1.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PA1.GPIO_Label=RF24_IRQ
@@ -58,6 +62,8 @@ PA1.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PA1.GPIO_PuPd=GPIO_PULLUP
 PA1.Locked=true
 PA1.Signal=GPXTI1
+PA10.Mode=Asynchronous
+PA10.Signal=USART1_RX
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
@@ -73,6 +79,8 @@ PA6.Mode=Full_Duplex_Master
 PA6.Signal=SPI1_MISO
 PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
+PA9.Mode=Asynchronous
+PA9.Signal=USART1_TX
 PC11.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 PC11.GPIO_Label=IIC_SDA
 PC11.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
@@ -117,7 +125,7 @@ ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
-ProjectManager.PreviousToolchain=
+ProjectManager.PreviousToolchain=STM32CubeIDE
 ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=cs301-watchcat.ioc
 ProjectManager.ProjectName=cs301-watchcat
@@ -174,9 +182,10 @@ TIM2.Prescaler=7199
 TIM3.IPParameters=Period,Prescaler
 TIM3.Period=4999
 TIM3.Prescaler=7199
+USART1.IPParameters=VirtualMode
+USART1.VirtualMode=VM_ASYNC
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
 VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 board=custom
-isbadioc=false
